--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>An unordered HTML list</h2>
+<h2>Om Namo Kaldev Namaha</h2>
 
 <ul>
   <li>Narayana</li>
@@ -10,6 +10,15 @@
   <li>Murugan</li>
 </ul>  
 
+<h2>Pk devops engineer</h2>
+
+<ul>
+  <li>GCP</li>
+  <li>AWS</li>
+  <li>Kubernetes</li>
+</ul>  
+
 </body>
 </html>
+
 
